<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.besenior.cryptobs.viewmodel.CryptoDetailViewModel"/>

        <variable
            name="model"
            type="com.besenior.cryptobs.model.cryptolistmodel.DataItem" />

    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#020325">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cryptoDetailCon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.besenior.cryptobs.CryptoDetailFragment.CryptoDetailFrag">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailAppbarCon"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/bookmarkbtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/oval_button"
                    android:contentDescription="@string/bookmarkbtn"
                    android:src="@drawable/ic_baseline_star_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/oval_button"
                    android:contentDescription="@string/backbutton"
                    android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/bookmarkbtn"
                    app:layout_constraintStart_toEndOf="@+id/backBtn"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="BTC/USD" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailPriceCon"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailAppbarCon">

                <TextView
                    android:id="@+id/detailCoinChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="#17FF00"
                    android:textSize="19sp"
                    app:layout_constraintEnd_toEndOf="@+id/detailCoinPrice"
                    app:layout_constraintHorizontal_bias="0.60"
                    app:layout_constraintStart_toStartOf="@+id/detailCoinPrice"
                    app:layout_constraintTop_toBottomOf="@+id/detailCoinPrice"
                    tools:text="2.68%" />

                <TextView
                    android:id="@+id/detailCoinPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.381"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="$108.56" />

                <ImageView
                    android:id="@+id/detailPriceChangeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/changeicon"
                    app:layout_constraintBottom_toBottomOf="@+id/detailCoinChange"
                    app:layout_constraintEnd_toStartOf="@+id/detailCoinChange"
                    app:layout_constraintTop_toTopOf="@+id/detailCoinChange"
                    tools:srcCompat="@drawable/ic_baseline_arrow_drop_up_24" />

                <ImageView
                    android:id="@+id/detailCoinLogo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/coinlogo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailChartCon"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailPriceCon">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCompatButton6"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="23dp"
                    android:background="@drawable/borderbutton_notactive"
                    android:onClick="@{(view) -> viewmodel.OnIntervalBtnClickByNumber(view,15,detaillChart,model.getSymbol(),appCompatButton,appCompatButton3,appCompatButton4,appCompatButton5,appCompatButton2)}"
                    android:text="@string/_15m"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/appCompatButton5"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCompatButton5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderbutton_notactive"
                    android:onClick="@{(view) -> viewmodel.OnIntervalBtnClickByNumber(view,60,detaillChart,model.getSymbol(),appCompatButton,appCompatButton3,appCompatButton4,appCompatButton2,appCompatButton6)}"
                    android:text="@string/_1h"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatButton6"
                    app:layout_constraintStart_toEndOf="@+id/appCompatButton4"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCompatButton4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderbutton_notactive"
                    android:onClick="@{(view) -> viewmodel.OnIntervalBtnClickByNumber(view,240,detaillChart,model.getSymbol(),appCompatButton,appCompatButton3,appCompatButton2,appCompatButton5,appCompatButton6)}"
                    android:text="@string/_4h"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatButton5"
                    app:layout_constraintStart_toEndOf="@+id/appCompatButton3"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCompatButton3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderbutton_active"
                    android:onClick="@{(view) -> viewmodel.OnIntervalBtnClickByChar(view,@string/Daily,detaillChart,model.getSymbol(),appCompatButton,appCompatButton2,appCompatButton4,appCompatButton5,appCompatButton6)}"
                    android:text="@string/_1d"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatButton4"
                    app:layout_constraintStart_toEndOf="@+id/appCompatButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCompatButton"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderbutton_notactive"
                    android:onClick="@{(view) -> viewmodel.OnIntervalBtnClickByChar(view,@string/weekly,detaillChart,model.getSymbol(),appCompatButton2,appCompatButton3,appCompatButton4,appCompatButton5,appCompatButton6)}"
                    android:text="@string/_1w"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatButton3"
                    app:layout_constraintStart_toEndOf="@+id/appCompatButton2"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCompatButton2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/borderbutton_notactive"
                    android:onClick="@{(view) -> viewmodel.OnIntervalBtnClickByChar(view,@string/monthly,detaillChart,model.getSymbol(),appCompatButton,appCompatButton3,appCompatButton4,appCompatButton5,appCompatButton6)}"
                    android:text="@string/_1m"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <WebView
                    android:id="@+id/detaillChart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatButton6" />

                <TextView
                    android:id="@+id/fullscreen_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="20dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/fullscreen"
                    android:textColor="#636363"
                    android:textIsSelectable="true"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detaillChart"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/AlldetailCon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailChartCon">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="#5B6E6AFA"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/derailRV"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layoutAnimation="@anim/layout_anim"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>